--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
 
 env:
-  go_version: '1.17'
+  go_version_desktop: '1.17'
+  go_version_mobile: '1.18'
   flutter_channel: 'stable'
   ndk_version: '23.1.7779620'
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -31,7 +32,7 @@ jobs:
           ref: 'master'
       - uses: actions/setup-go@v2
         with:
-          go-version: ${{ env.go_version }}
+          go-version: ${{ env.go_version_desktop }}
       - name: Cache go modules
         uses: actions/cache@v3
         with:
@@ -57,42 +58,54 @@ jobs:
           - target: windows
             host: windows-latest
             flutter_version: '2.10.3'
+            go_version: ${{ env.go_version_desktop }}
           - target: macos
             host: macos-latest
             flutter_version: '2.10.3'
+            go_version: ${{ env.go_version_desktop }}
           - target: linux
             host: ubuntu-latest
             flutter_version: '2.10.3'
+            go_version: ${{ env.go_version_desktop }}
           - target: ios
             host: macos-latest
             flutter_version: '3.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: ios
             host: macos-latest
             flutter_version: '2.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '3.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-arm64
             host: ubuntu-latest
             flutter_version: '3.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '3.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '2.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-arm64
             host: ubuntu-latest
             flutter_version: '2.10.5'
+            go_version: ${{ env.go_version_mobile }}
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '2.10.5'
+            go_version: ${{ env.go_version_mobile }}
 
     runs-on: ${{ matrix.config.host }}
 
     env:
       TARGET: ${{ matrix.config.target }}
       flutter_version: ${{ matrix.config.flutter_version }}
+      go_version: ${{ matrix.config.go_version }}
 
     steps:
       - name: Checkout
