--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -5,7 +5,6 @@ on:
 
 env:
   flutter_channel: 'stable'
-  ndk_version: '23.1.7779620'
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
@@ -206,7 +205,7 @@ jobs:
         uses: android-actions/setup-android@v3
         with:
           cmdline-tools-version: 8512546
-          packages: 'platform-tools platforms;android-32 build-tools;30.0.2 ndk;23.1.7779620'
+          packages: 'platform-tools platforms;android-32 build-tools;30.0.2 ndk;27.0.12077973'
 
 
       - name: Setup msys2 (Windows)
@@ -236,7 +235,7 @@ jobs:
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
         run: |
-          go install golang.org/x/mobile/cmd/gomobile@latest
+          go install golang.org/x/mobile/cmd/gomobile@v0.0.0-20241213221354-a87c1cf6cf46
 
       - name: Set-Version (All)
         if: steps.check_asset.outputs.skip_build != 'true'
